# octerm

./: .gitignore  Cargo.toml
src/: actions.rs  app.rs  completion.rs  error.rs  events.rs  github.rs  keybind.rs  lib.rs  line_editor.rs  main.rs  markdown.rs  network.rs  parsec.rs  parser.rs  ui.rs  util.rs
src/components/: discussion.rs  events.rs  issues.rs  mod.rs  notifications.rs  pullrequest.rs  release.rs
src/github/: events.rs
src/network/: graphql.rs  methods.rs  server.rs
src/parser/: types.rs
src/queries/: discussion.graphql  discussion_search.graphql  issue.graphql  pr.graphql
