[package]
name = "octerm"
version = "0.1.0"
edition = "2021"

default-run = "octerm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.15.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
crossterm = "0.22.1"
open = "2"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
futures = "0.3.19"
pulldown-cmark = { version = "0.9.1", default-features = false }
