[package]
name = "octerm"
version = "0.1.0"
edition = "2021"

default-run = "octerm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.17.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tui = "0.19.0"
crossterm = "0.25.0"
open = "3.0.3"
log = "0.4.17"
env_logger = "0.9.1"
thiserror = "1.0.37"
futures = "0.3.25"
pulldown-cmark = { version = "0.9.2", default-features = false }
