[package]
name = "octerm"
version = "0.1.0"
edition = "2021"

default-run = "octerm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.17.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
open = "3.0.3"
log = "0.4.17"
env_logger = "0.9.1"
thiserror = "1.0.37"
futures = "0.3.25"
graphql_client = "0.11.0"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.23"
reedline = "0.15.0"

pulldown-cmark = { version = "0.9.2", default-features = false, optional = true }
meow-tui = { path = "../meow", optional = true }
# pin at 0.24 to maintain compatibilty with reedline until they update their crossterm version
crossterm = "0.24.0"

[features]
tui = ["dep:pulldown-cmark", "dep:meow-tui"]
